# non-dirty_mcp-client-and-server

./: debug_path.py  gaps.txt  import_test.py  pyproject.toml  todo.txt
src/mcp_client_and_server/: __init__.py  __main__.py  client.py  server.py
tests/: test_server.py
