[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-client-and-server"
version = "0.1.0"
description = "MCP Client and Server with Chaining Capabilities"
readme = "README.md"
requires-python = ">=3.12.7"
authors = [
    { name = "Matthew Smith", email = "non_dirty@me.com" },
]
license = "MIT"
keywords = ["mcp", "mcp-server", "client", "server", "chaining"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
mcp-client-and-server = "mcp_client_and_server:main"

[project.urls]
Homepage = "https://github.com/non-dirty/mcp-client-and-server"

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_client_and_server"]
